# solrbenchmark

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: do-checks-and-tests.yml  publish.yml
src/solrbenchmark/: __init__.py  docs.py  localtypes.py  parameters.py  runner.py  schema.py  terms.py  timer.py
tests/: conftest.py  docker-compose.sh  docker-compose.yml  test_docs.py  test_runner.py  test_runner_integration.py  test_schema.py  test_terms.py
tests/integration/: conftest.py  docker-compose.sh  docker-compose.yml  template.env  test_runner_integration.py
tests/integration/solrconf/: managed-schema
tests/solrconf/: solrconfig.xml
